<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.activity.PreLoginActivity">

    <ImageView
        android:id="@+id/activity_pre_login_app_logo_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/activity_pre_login_app_logo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:textStyle="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="15dp">

            <Button
                android:id="@+id/activity_pre_login_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:onClick="launchRegisterActivity"
                android:text="@string/action_register"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_pre_login_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:onClick="launchLoginActivity"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>